# nlp-tools

./: .gitignore  README.md  nlp-tools.cabal  qtest  wrident.cabal  wridentify.cabal
src/: Analyze.hs  BuildDB.hs  Main.hs  ReadDB.hs  Test.hs  Wrident.hs
src/NLP/: Tools.hs
src/NLP/Tools/: Convenience.hs  Database.hs
