name:                nlp-tools
version:             0.0.0.0
synopsis:            a collection of NLP utilities
license:             BSD2
license-file:        LICENSE
author:              RoboNickBot
maintainer:          nicklewchenko92@gmail.com
category:            Natural Language Processing
build-type:          Simple
cabal-version:       >=1.10

executable wrident
  main-is:             Wrident.hs
  other-modules:       NLP.Tools
  build-depends:       base >=4.7 && <4.8, containers, directory, nlp-libs >=0.0 && <0.1, optparse-applicative >= 0.11.0.2, text >=1.2 && <1.3
  hs-source-dirs:      src
  default-language:    Haskell2010

executable analyze
  main-is:             Analyze.hs
  other-modules:       NLP.Tools
  build-depends:       base >=4.7 && <4.8, containers, directory, nlp-libs >=0.0 && <0.1, optparse-applicative >= 0.11.0.2, text >=1.2 && <1.3, strict >=0.3 && <0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
