name:                wrident
version:             0.0.0.0
synopsis:            identify writing systems used by texts
license:             BSD2
license-file:        LICENSE
author:              RoboNickBot
maintainer:          nicklewchenko92@gmail.com
category:            Natural Language Processing
build-type:          Simple
cabal-version:       >=1.10

executable wrident
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8, nlp-tools >=0.0 && <0.1, text >=1.2 && <1.3, directory
  hs-source-dirs:      src
  default-language:    Haskell2010